use `readAllBytes`
`readString` was introduced in Java 11. The `test-java` tasks use JDK 8.